--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <h2>Responsabilidades de Líderes</h2>
   <h3>Archivo Generado el día:</h3>
   <h3 id="today"></h3>
-  <p>Welcome to the Leaders Responsibilities Scheduling Services</p>
+  <p>Bienvenidos al Servicios de Programación de Responsabilidades de Líderes</p>
 
   <div class="table-responsive">
     <table>
@@ -73,6 +73,8 @@
         </tr>
       </thead>
       <tbody>
+        <th></th>
+        <th class="center-align">Listado</th>
         <tr>
           <td class="center-align">Fecha del Servicio</td>
           <td contenteditable="true"></td>
