--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
   <h1>Organización Semanal - Cristo Vive</h1>
   <h2>Responsabilidades de Líderes</h2>
-  <h3 id="today"></h3>
 
   <div class="table-responsive">
     <table>
@@ -125,7 +124,7 @@
     </table>
 </div>
 <div class="footer">
-  <p>Fecha del archivo generado: <span id="file-generated-date"></span></p>
+  <p>Fecha del archivo generado: <span id="today"></span></p>
 </div>
 <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
 <p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V2.2.2.5</p>
