--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <thead>
         <tr>
           <th></th>
+          <th class="center-align">Listado de Responsabilidades/th>
           <th class="center-align">Martes</th>
           <th class="center-align">Viernes</th>
           <th class="center-align">Sábado</th>
