--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
       <thead>
         <tr>
           <th></th>
-          <th class="center-align">Listado de Responsabilidades</th>
           <th class="center-align">Martes</th>
           <th class="center-align">Viernes</th>
           <th class="center-align">Sábado</th>
@@ -72,6 +71,9 @@
         </tr>
       </thead>
       <tbody>
+        <tr>
+            <td class="center-align">Listado de Responsabilidades/td>
+        </tr>
         <tr>
           <td class="center-align">Fecha del Servicio</td>
           <td contenteditable="true"></td>
