--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
       </thead>
       <tbody>
         <tr>
-            <td class="center-align">Listado de Responsabilidades/td>
-        </tr>
-        <tr>
           <td class="center-align">Fecha del Servicio</td>
           <td contenteditable="true"></td>
           <td contenteditable="true"></td>
@@ -130,17 +127,17 @@
   <p>Fecha del archivo generado: <span id="today"></span></p>
 </div>
 <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
-<p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V2.2.2.5</p>
-<button id="print-button">🗂️Imprimir PDF - Organización Semanal</button>
+<p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V2.2.2.9</p>
+<button id="print-button">ImprimirOrganización Semanal</button>
 
 <div class="watermark">Iglesia Cristo Vive</div>
 <!-- Modal Structure -->
 <div id="data-modal" class="modal">
   <div class="modal-content">
-    <h4>Ingresa los datos</h4>
+    <h4>Ingresa la informacion correspondiente</h4>
     <div class="input-field">
       <input id="modal-input" type="text" class="validate">
-      <label for="modal-input">Datos</label>
+      <label for="modal-input">Ingresa la informacion correspondiente</label>
     </div>
   </div>
   <div class="modal-footer">
