2. Save the code as an HTML file with  a ".html" extension (e.g., "organizacion_semanal.html").
3. Open the HTML file using a web browser.

You should now see the enhanced weekly
organization table with the necessary dependencies included.
The table cells can be edited by clicking on them,
and you can print the organization using the
"Imprimir Organización Semanal" button.

--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
         <tr>
           <td class="center-align">Meditación de la Palabra</td>
           <td class="editable-cell"></td>
-          <td class="
-                 editable-cell"></td>
+          <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           </tr>
@@ -132,7 +131,7 @@
           <p>Fecha del archivo generado: <span id="today"></span></p>
         </div>
         <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado."</p>
-        <p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V3</p>
+        <p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V2.2.2.9</p>
         <button id="print-button">Imprimir Organización Semanal</button>
         <div class="watermark">Iglesia Cristo Vive</div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
