--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
   <p>Fecha del archivo generado: <span id="today"></span></p>
 </div>
 <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado."</p>
-<p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V4 </p>
+<p>&copy; Equipo 💚 Cristo Vive Multimedia Confidencial ,V4 </p>
 <button id="print-button">Imprimir Organización Semanal</button>
 
 <div class="watermark">Iglesia Cristo Vive</div>
 <!-- Modal Structure -->
 <div id="data-modal" class="modal">
   <div class="modal-content">
-    <h4>Agregar La informacion Correspondiente</h4>
+    <h4>Ingresar Los datos Adecuados😎</h4>
     <div class="input-field">
       <input id="modal-input" type="text" class="validate">
-      <label for="modal-input">estamos trabajando para usted⚙️</label>
+      <label for="modal-input">servidor de datos activo✅ : estamos trabajando para usted⚙️</label>
     </div>
   </div>
   <div class="modal-footer">
