--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Organización Semanal - Cristo Vive</title>
+  <title>Organización Semanal</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <style>
@@ -60,7 +60,7 @@
   </header>
 
   <h1>Organización Semanal - Cristo Vive</h1>
-  <h2>Responsabilidades de Líderes</h2>
+  <h2>Responsabilidades de Líderes de la Iglesia Cristo Vive</h2>
 
   <div class="table-responsive">
     <table>
@@ -82,7 +82,7 @@
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align">Quién dirige</td>
+          <td class="center-align">Dirige</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
